--- a/src/components/template/Card.scss
+++ b/src/components/template/Card.scss
@@ -2,8 +2,42 @@
 
 .cardp {
     width: 18rem;
-    box-shadow: $shadow;
-    display: inline-flex;
     margin: 3px;
-    background-color: rgba(0, 0, 0, 0.6);
+}
+
+.card-columns {
+    column-count: 4;
+}
+
+.cardp:hover .card-img-top {
+    -webkit-filter: grayscale(0%);
+    filter: grayscale(0%);
+    animation-name: fade;
+    animation-duration: .6s;
+    opacity: 1;
+}
+
+.card-img-top {
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+    opacity: 0.7;
+}
+
+@keyframes fade {
+    from {
+        -webkit-filter: grayscale(100%);
+        filter: grayscale(100%);
+        opacity: 0.7;
+    }
+
+    to {
+        -webkit-filter: grayscale(0%);
+        filter: grayscale(0%);
+        opacity: 1;
+    }
+}
+
+.card-body {
+    opacity: 1;
+    text-shadow: $shadow;
 }
