--- a/src/components/template/LogoPatrocinio.scss
+++ b/src/components/template/LogoPatrocinio.scss
@@ -5,3 +5,11 @@
     margin: 1% 4%;
     display: inline-block;
 }
+
+@media (max-width: 576px){
+    .logop {
+        width: 13%;
+        margin: 1% 4%;
+        display: inline-block;
+    }
+}
