--- a/src/components/template/Logo.scss
+++ b/src/components/template/Logo.scss
@@ -65,3 +65,11 @@ header.logo img {
     width: 60%;
     margin: auto 40vh;
 }
+
+@media (max-width: 576px){
+    header.logo img {
+        // padding-top: 40vh;
+        width: 60%;
+        margin: auto;
+    }
+}
