--- a/src/components/template/Button.scss
+++ b/src/components/template/Button.scss
@@ -7,17 +7,17 @@ $grad4;
 $cont: 1;
 
 @each $cor in $lista-cor {
-    button.bt#{$cont} {
+    .bt#{$cont} {
         background-color: $cor;
         color: white;
-        line-height:  200%;
-        font-size: 2em;
-        border-radius: 1em;
-        border: solid 4px $cor;
+        // line-height:  200%;
+        // font-size: 2em;
+        border-radius: 0.5em;
+        border: solid 2px $cor;
     }
 
     .bt#{$cont}:hover {
-        border: solid 4px $cor;
+        border: solid 2px $cor;
         color: $cor;
         background-color: $fundo;
     }
