corrigido responsividade e adicionado alguns alerts

--- a/src/components/template/Ingressos.scss
+++ b/src/components/template/Ingressos.scss
@@ -27,8 +27,8 @@
     transform: scale(1.2);
     text-decoration: none;
     border-color: $cor-principal;
-    font-weight: bolder;
-    color: $cor-sec;
+    // font-weight: bolder;
+    color: $cor-text;
 
 }
 
