--- a/src/components/template/Logo.scss
+++ b/src/components/template/Logo.scss
@@ -63,3 +63,13 @@ header.logo {
 header.logo img {
     width: 60%;
 }
+
+@media (max-width:map-get($grid-breakpoints, md)) {
+    header.logo img {
+        width: 90%;
+    }
+
+    header.logo {
+        height: $logo-height-min;    
+    }
+  }
